--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Nunito&display=swap" rel="stylesheet">
 
     <title>Desafio Form Single Page</title>
-  <script type="module" crossorigin src="/<REPO>/assets/index.fcd3e34e.js"></script>
-  <link rel="stylesheet" href="/<REPO>/assets/index.c0e948eb.css">
+  <script type="module" crossorigin src="/desafioFormSinglePage/assets/index.fcd3e34e.js"></script>
+  <link rel="stylesheet" href="/desafioFormSinglePage/assets/index.c0e948eb.css">
 </head>
 
 <body>
